libs/ui/KisViewManager.cpp
@@ -151,7 +151,7 @@ class KisViewManager::KisViewManagerPrivate
 
 public:
 
-    KisViewManagerPrivate(KisViewManager *_q, QWidget *_q_parent)
+    KisViewManagerPrivate(KisViewManager *_q, KActionCollection *_actionCollection, QWidget *_q_parent)
         : filterManager(_q)
         , createTemplate(0)
         , saveIncremental(0)
@@ -175,13 +175,14 @@ public:
         , gridManager(_q)
         , canvasControlsManager(_q)
         , paintingAssistantsManager(_q)
-        , actionManager(_q)
+        , actionManager(_q, _actionCollection)
         , mainWindow(0)
         , showFloatingMessage(true)
         , currentImageView(0)
         , canvasResourceProvider(_q)
         , canvasResourceManager()
         , guiUpdateCompressor(30, KisSignalCompressor::POSTPONE, _q)
+        , actionCollection(_actionCollection)
         , mirrorManager(_q)
         , inputManager(_q)
         , actionAuthor(0)
@@ -249,7 +250,7 @@ public:
 
 
 KisViewManager::KisViewManager(QWidget *parent, KActionCollection *_actionCollection)
-    : d(new KisViewManagerPrivate(this, parent))
+    : d(new KisViewManagerPrivate(this, _actionCollection, parent))
 {
     d->actionCollection = _actionCollection;
     d->mainWindow = dynamic_cast<QMainWindow*>(parent);
