libs/ui/kis_action_manager.cpp
@@ -56,18 +56,22 @@ public:
     }
 
     KisViewManager* viewManager;
+    KActionCollection *actionCollection;
+
     QList<KisAction*> actions;
     KoGenericRegistry<KisOperationUIFactory*> uiRegistry;
     KisOperationRegistry operationRegistry;
 
 };
 
-KisActionManager::KisActionManager(KisViewManager* viewManager)
+KisActionManager::KisActionManager(KisViewManager* viewManager, KActionCollection *actionCollection)
     : d(new Private)
 {
     d->viewManager = viewManager;
+    d->actionCollection = actionCollection;
 
-
+    connect(d->actionCollection,
+            SIGNAL(inserted(QAction*)), SLOT(slotActionAddedToCollection(QAction*)));
 }
 
 KisActionManager::~KisActionManager()
@@ -121,15 +125,27 @@ void KisActionManager::setView(QPointer<KisView> imageView)
     Q_UNUSED(imageView);
 }
 
+void KisActionManager::slotActionAddedToCollection(QAction *action)
+{
+    /**
+     * Small hack alert: not all the actions are still created by the manager and
+     * immediately added to the action collection. Some plugins add actions
+     * directly to the action collection when a document is created. Here we
+     * catch these cases
+     */
+
+    KisActionRegistry::instance()->updateShortcut(action->objectName(), action);
+}
+
 void KisActionManager::addAction(const QString& name, KisAction* action)
 {
     Q_ASSERT(!name.isEmpty());
     Q_ASSERT(action);
     Q_ASSERT(d->viewManager);
-    Q_ASSERT(d->viewManager->actionCollection());
+    Q_ASSERT(d->actionCollection);
 
-    d->viewManager->actionCollection()->addAction(name, action);
-    action->setParent(d->viewManager->actionCollection());
+    d->actionCollection->addAction(name, action);
+    action->setParent(d->actionCollection);
 
     d->actions.append(action);
     action->setActionManager(this);
@@ -140,8 +156,8 @@ void KisActionManager::takeAction(KisAction* action)
     d->actions.removeOne(action);
 
     if (!action->objectName().isEmpty()) {
-        KIS_ASSERT_RECOVER_RETURN(d->viewManager->actionCollection());
-        d->viewManager->actionCollection()->takeAction(action);
+        KIS_ASSERT_RECOVER_RETURN(d->actionCollection);
+        d->actionCollection->takeAction(action);
     }
 }
 
